# Enterprise-Agent-OS

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/middleware/: org_scope.py
apps/api/app/models/: __init__.py  audit.py  base.py  kpi.py  run.py  tool.py  workflow.py
apps/api/app/routers/: approvals.py  audit.py  knowledge.py  kpi.py  runs.py  tools.py  webhooks.py  workflows.py
apps/api/app/services/: audit.py  events.py  knowledge.py  llm.py  memory.py  orchestrator.py  tools.py  workers.py
apps/api/app/workflows/: __init__.py  it_triage.py
apps/api/scripts/: smoke_llm.py
apps/api/tests/: conftest.py  test_health.py  test_llm_router.py  test_orchestrator.py  test_tools_registry.py  test_workflows.py
apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/__tests__/: hooks.test.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/approvals/: page.tsx
apps/web/src/app/governance/: page.tsx
apps/web/src/app/knowledge/: page.tsx
apps/web/src/app/runs/: page.tsx
apps/web/src/app/tools/: page.tsx
apps/web/src/app/workflows/: page.tsx
apps/web/src/components/common/: KPICard.tsx  StatusDot.tsx  index.ts
apps/web/src/components/layout/: Topbar.tsx  (+4 more)
apps/web/src/lib/: api-client.ts  hooks.ts  utils.ts
apps/web/src/stores/: ui.ts
apps/worker/governance/: Dockerfile  go.mod
apps/worker/governance/cmd/: main.go  pg_stores.go  stores.go
(+15 files in other folders)
